developerProject/force-app/main/default/objects/OJSERLIB__Application_Director_Partner_Proprietor__c/OJSERLIB__Application_Director_Partner_Proprietor__c.object-meta.xml
<CustomObject>
    <label>Application Guarantor</label>
    <nameField>
        <label>Application Director/Partner/Proprietor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Guarantors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>