developerProject/force-app/main/default/objects/OJSERLIB__Application_Director_Partner_Proprietor__c/fields/OJSERLIB__City__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>