developerProject/force-app/main/default/objects/OJSERLIB__Application_Director_Partner_Proprietor__c/fields/OJSERLIB__Drivers_License__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Drivers_License__c</fullName>
    <label>Drivers License</label>
    <length>20</length>
    <type>Text</type>
</CustomField>