developerProject/force-app/main/default/objects/OJSERLIB__Application_Director_Partner_Proprietor__c/fields/OJSERLIB__Email__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>