developerProject/force-app/main/default/objects/OJSERLIB__Application_Director_Partner_Proprietor__c/fields/OJSERLIB__Guarantor_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Guarantor_Full_Name__c</fullName>
    <formula>UPPER(OJSERLIB__First_Name__c &amp;&quot; &quot;&amp;OJSERLIB__Last_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guarantor Full Name</label>
    <type>Text</type>
</CustomField>