developerProject/force-app/main/default/objects/OJSERLIB__Application_Director_Partner_Proprietor__c/fields/OJSERLIB__Home_Property__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Home_Property__c</fullName>
    <label>Home Property</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Buying</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>