developerProject/force-app/main/default/objects/OJSERLIB__Application_Director_Partner_Proprietor__c/fields/OJSERLIB__Is_Title_Search_Verified__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Is_Title_Search_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Title Search Verified</label>
    <type>Checkbox</type>
</CustomField>