developerProject/force-app/main/default/objects/OJSERLIB__Application_Director_Partner_Proprietor__c/fields/OJSERLIB__IsPrivacy_Policy_Accepted__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsPrivacy_Policy_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPrivacy Policy Accepted</label>
    <type>Checkbox</type>
</CustomField>