developerProject/force-app/main/default/objects/OJSERLIB__Application_Director_Partner_Proprietor__c/fields/OJSERLIB__Market_Value__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Market_Value__c</fullName>
    <label>Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>