developerProject/force-app/main/default/objects/OJSERLIB__Application_Director_Partner_Proprietor__c/fields/OJSERLIB__Position__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Position__c</fullName>
    <formula>IF(OJSERLIB__IsBusiness_Director__c , &quot;Business Director&quot; , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position</label>
    <type>Text</type>
</CustomField>