developerProject/force-app/main/default/objects/OJSERLIB__Application_Director_Partner_Proprietor__c/fields/OJSERLIB__PostCode__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__PostCode__c</fullName>
    <label>Post Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>