developerProject/force-app/main/default/objects/OJSERLIB__Application_Director_Partner_Proprietor__c/fields/OJSERLIB__Time_at_Address__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Time_at_Address__c</fullName>
    <label>Time at Address</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>